--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -35,8 +35,12 @@
         #textTitle {
             font-size: 100%;
         }
-        .intro-text{
+
+        .intro-text {
             font-size: 80%;
+        }
+        #img-uady-jaguar {
+            border-radius: 100%;
         }
     </style>
 
@@ -93,8 +97,7 @@
             <div class="col-lg-12">
                 <!--<img class="img-responsive" src="../img/profile.png" alt="">-->
 
-                    <img  class="img-responsive" src="../img/profile.png" alt="">
-
+                <img id="img-uady-jaguar" class="img-responsive" src="../img/uady-jaguar.png" alt="">
 
 
                 <div class="intro-text">
@@ -222,7 +225,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                <form name="sentMessage" id="contactForm" > <!--novalidate-->
+                <form name="sentMessage" id="contactForm"> <!--novalidate-->
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Name</label>
