--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -127,7 +127,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/cabin.png" class="img-responsive" alt="">
+                    <img src="../img/portfolio/car.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -137,7 +137,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/cake.png" class="img-responsive" alt="">
+                    <img src="../img/portfolio/mariobross.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -147,7 +147,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/circus.png" class="img-responsive" alt="">
+                    <img src="../img/portfolio/ajedrez.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -157,7 +157,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/game.png" class="img-responsive" alt="">
+                    <img src="../img/portfolio/preguntados.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -167,7 +167,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/safe.png" class="img-responsive" alt="">
+                    <img src="../img/portfolio/minecraft.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -177,7 +177,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/submarine.png" class="img-responsive" alt="">
+                    <img src="../img/portfolio/buscaminas.jpg" class="img-responsive" alt="">
                 </a>
             </div>
         </div>
@@ -256,8 +256,8 @@
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Mensaje</label>
-                            <textarea rows="5" class="form-control" placeholder="Mensaje" id="message" required
+                            <label>Comentario</label>
+                            <textarea rows="5" class="form-control" placeholder="Comentarios" id="message" required
                                       data-validation-required-message="Por favor escriba algún mensaje para nosotros."></textarea>
 
                             <p class="help-block text-danger"></p>
@@ -352,7 +352,7 @@
                     <div class="modal-body">
                         <h2>Primera App hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/portfolio/car.jpg" class="img-responsive img-centered" alt="">
                         <!--<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>-->
                         <p>En este espacio se definirá todo lo que se requiera, acerca de alguna aplicación hecha
                             por el profesor..</p>
@@ -395,7 +395,7 @@
                     <div class="modal-body">
                         <h2>Segunda App hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/portfolio/mariobross.jpg" class="img-responsive img-centered" alt="">
 
                         <!--<p>Use this area of the page to describe your project. The icon above is part of a free icon set-->
                         <!--by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can-->
@@ -441,7 +441,7 @@
                     <div class="modal-body">
                         <h2>Tercera App Hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/portfolio/ajedrez.jpg" class="img-responsive img-centered" alt="">
 
                         <p>Alguna descripción</p>
                         <ul class="list-inline item-details">
@@ -480,7 +480,7 @@
                     <div class="modal-body">
                         <h2>Cuarta app hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/portfolio/preguntados.jpg" class="img-responsive img-centered" alt="">
 
                         <p>Descripción</p>
                         <ul class="list-inline item-details">
@@ -519,7 +519,7 @@
                     <div class="modal-body">
                         <h2>Quinta app hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/portfolio/minecraft.jpg" class="img-responsive img-centered" alt="">
 
                         <p>Descripcion</p>
                         <ul class="list-inline item-details">
@@ -558,7 +558,7 @@
                     <div class="modal-body">
                         <h2>Project Title</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/portfolio/buscaminas.jpg" class="img-responsive img-centered" alt="">
 
                         <p>Descripción</p>
                         <ul class="list-inline item-details">
