Agrego los archivos que dio el profe Reyes, sobre las aplicaciones que ha hecho.

--- a/Vistas/tecnologias.html
+++ b/Vistas/tecnologias.html
@@ -89,7 +89,7 @@
                         <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
                         <li><a href="#">Publicaciones</a></li>
                         <li><a href="#apps_hechas">Juegos de Aprendizaje</a></li>
-                        <li><a href="#about">Conocenos</a></li>
+                        <li><a href="#about">Conócenos</a></li>
                     </ul>
                 </li>
                 <li class="page-scroll">
@@ -220,7 +220,6 @@
     </a>
 </div>
 
-<!-- Portfolio Modals -->
 <div class="modal fade" id="androidModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
