Ya redireccciona de index a tecnologias y viceversa.

--- a/Vistas/tecnologias.html
+++ b/Vistas/tecnologias.html
@@ -68,7 +68,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a id="textTitle" class="navbar-brand" href="#page-top">
+            <a id="textTitle" class="navbar-brand" href="index.html">
                 Bienvenido a la página de apps hechas en la UADY!</a>
 
 
