--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -77,8 +77,16 @@
                 <li class="page-scroll">
                     <a href="#apps_hechas">Applicaciones hechas</a>
                 </li>
-                <li class="page-scroll">
-                    <a href="#about">Acerca de</a>
+                <li class="page-scroll dropdown">
+
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acerca de  <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
+                        <li><a href="#">Publicaciones</a></li>
+                        <li><a href="#apps_hechas">Juegos de Aprendizaje</a></li>
+                        <li><a href="#about">Conocenos</a></li>
+                    </ul>
+                    <!--<a href="#about">Acerca de</a>-->
                 </li>
                 <li class="page-scroll">
                     <a href="#contact">Contáctanos</a>
@@ -268,7 +276,7 @@
                     <div id="success"></div>
                     <div class="row">
                         <div class="form-group col-xs-12">
-                            <button type="submit" class="btn btn-success btn-lg">Enviar</button>
+                            <button type="submit" class="btn  btn-primary btn-lg">Enviar</button>
                         </div>
                     </div>
                 </form>
