--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -82,8 +82,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acerca de  <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
-                        <li><a href="#">Publicaciones</a></li>
-                        <li><a href="#apps_hechas">Juegos de Aprendizaje</a></li>
+                        <li><a href="publicaciones.html">Publicaciones</a></li>
                         <li><a href="#about">Conocenos</a></li>
                     </ul>
                     <!--<a href="#about">Acerca de</a>-->
@@ -135,7 +134,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/car.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/geometronix2.png" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -145,7 +144,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/mariobross.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/unoaritmetico2.png" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -155,7 +154,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/ajedrez.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/quitaypon.png" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -165,7 +164,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/preguntados.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/warfare.png" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -175,7 +174,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/minecraft.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/fracciones2.png" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -185,7 +184,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/portfolio/buscaminas.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/cuantofalta.png" class="img-responsive" alt="">
                 </a>
             </div>
         </div>
@@ -358,12 +357,11 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
-                        <h2>Primera App hecha</h2>
+                        <h2>Geometronix</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/car.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/geometronixganaste.png" class="img-responsive img-centered" alt="">
                         <!--<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>-->
-                        <p>En este espacio se definirá todo lo que se requiera, acerca de alguna aplicación hecha
-                            por el profesor..</p>
+                        <p>Geometronix es un juego multijugador para dispositivos poviles que sirve a los niños a mejorar su capacidad de analisis y su habilidad para identificar figuras geometricas.</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <!--<strong><a href="http://startbootstrap.com">Start Bootstrap</a>-->
@@ -378,6 +376,12 @@
                             <li>Tutores:
                                 <strong><a href="#">Página de los profesores</a>
                                 </strong>
+                            </li>
+                            <li>Juego :
+                                <a href="">Geometronix</a>
+                            </li>
+                            <li> Manual:
+                                <a href="">Manual_de_Usuario.docx</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
@@ -401,15 +405,15 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
-                        <h2>Segunda App hecha</h2>
+                        <h2>Uno Aritemtico</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/mariobross.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/unoaritmetico1.png" class="img-responsive img-centered" alt="">
 
                         <!--<p>Use this area of the page to describe your project. The icon above is part of a free icon set-->
                         <!--by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can-->
                         <!--download their free set with 16 icons, or you can purchase the entire set with 146 icons for-->
                         <!--only $12!</p>-->
-                        <p>Alguna descripción que desee el profe..</p>
+                        <p>Uno Aritmetico es un juego que ayuda a desarrollar la habilidad matematicas de quienes lo juegan</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <!--<strong><a href="http://startbootstrap.com">Start Bootstrap</a>-->
@@ -424,6 +428,12 @@
                             <li>Tutores:
                                 <strong><a href="#">Página de los profesores</a>
                                 </strong>
+                            </li>
+                            <li>Juego :
+                                <a href="">Descargar_UnoAritemetico</a>
+                            </li>
+                            <li> Manual:
+                                <a href="">Manual_de_Usuario.docx</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
@@ -447,11 +457,11 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
-                        <h2>Tercera App Hecha</h2>
+                        <h2>Quita y Pon</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/ajedrez.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/quitaypon1.png" class="img-responsive img-centered" alt="">
 
-                        <p>Alguna descripción</p>
+                        <p>El juego consiste en completar operaciones aritméticas con los operadores y operandos adecuados para resolver correctamente la misma. Es de gran ayuda para desarrollar las habilidades aritmeticas de los niños</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <strong><a href="#">Link a página de algún autor...</a></strong>
@@ -463,6 +473,12 @@
                             <li>Tutores:
                                 <strong><a href="#">Página de los profesores</a>
                                 </strong>
+                            </li>
+                            <li>Juego :
+                                <a href="">Quita_y_pon</a>
+                            </li>
+                            <li> Manual:
+                                <a href="">Manual_de_Usuario.docx</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
@@ -488,7 +504,7 @@
                     <div class="modal-body">
                         <h2>Cuarta app hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/preguntados.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/warfare1.png" class="img-responsive img-centered" alt="">
 
                         <p>Descripción</p>
                         <ul class="list-inline item-details">
@@ -527,7 +543,7 @@
                     <div class="modal-body">
                         <h2>Quinta app hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/minecraft.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/fracciones1.png" class="img-responsive img-centered" alt="">
 
                         <p>Descripcion</p>
                         <ul class="list-inline item-details">
@@ -566,7 +582,7 @@
                     <div class="modal-body">
                         <h2>Project Title</h2>
                         <hr class="star-primary">
-                        <img src="../img/portfolio/buscaminas.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/cuantofalta2.png" class="img-responsive img-centered" alt="">
 
                         <p>Descripción</p>
                         <ul class="list-inline item-details">
