Ya descarga los manuales de usuario. También quité algunas características de las otras páginas, para que no salga error de NO encontrado

--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -381,7 +381,8 @@
                                 <a href="">Geometronix</a>
                             </li>
                             <li> Manual:
-                                <a href="">Manual_de_Usuario.docx</a>
+                                <a href="../Media/Manuales/Adivina_al_geometronix.pptx"
+                                        target="_blank">Descargar Presentación del Geometronix</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
@@ -433,7 +434,8 @@
                                 <a href="">Descargar_UnoAritemetico</a>
                             </li>
                             <li> Manual:
-                                <a href="">Manual_de_Usuario.docx</a>
+                                <a href="../Media/Manuales/Manual%20Usuario%20-%20Uno%20Aritmetico.docx"
+                                        target="_blank">Descargar Manual de Usuario</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
@@ -478,7 +480,8 @@
                                 <a href="">Quita_y_pon</a>
                             </li>
                             <li> Manual:
-                                <a href="">Manual_de_Usuario.docx</a>
+                                <a href="../Media/Manuales/Manual_de_usuario-Quita_y_Pon.docx"
+                                        target="_blank">Descargar Manual de usuario</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
