--- a/Vistas/publicaciones.html
+++ b/Vistas/publicaciones.html
@@ -74,7 +74,7 @@
             </button>
 
             <a id="textTitle" class="navbar-brand" href="index.html">
-                Bienvenido a la página de apps hechas en la UADY!</a>
+                REGRESAR A INICIO</a>
 
 
         </div>
@@ -85,20 +85,20 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <li class="page-scroll">
-                    <a href="index.html #apps_hechas">Applicaciones hechas</a>
-                </li>
+                <!--<li class="page-scroll">-->
+                    <!--<a href="index.html #apps_hechas">Applicaciones hechas</a>-->
+                <!--</li>-->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acerca de  <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
                         <li><a href="publicaciones.html">Publicaciones</a></li>
-                        <li><a href="index.html #about">Conócenos</a></li>
+                        <!--<li><a href="index.html #about">Conócenos</a></li>-->
                     </ul>
                 </li>
-                <li class="page-scroll">
-                    <a href="index.html #contact">Contáctanos</a>
-                </li>
+                <!--<li class="page-scroll">-->
+                    <!--<a href="index.html #contact">Contáctanos</a>-->
+                <!--</li>-->
 
 
             </ul>
