Agregué nuevas imágenes, pero faltaron 2, porque no supe que celulares eran y no me puse a leer el documento.

--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -174,7 +174,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/fracciones2.png" class="img-responsive" alt="">
+                    <img src="../img/juegos/fracciones2-en-iphone-plus.png" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -461,7 +461,7 @@
                     <div class="modal-body">
                         <h2>Quita y Pon</h2>
                         <hr class="star-primary">
-                        <img src="../img/juegos/quita-y-pon-en-tablet.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/quita-y-pon-iphone-plus.png" class="img-responsive img-centered" alt="">
 
                         <p>El juego consiste en completar operaciones aritméticas con los operadores y operandos adecuados para resolver correctamente la misma. Es de gran ayuda para desarrollar las habilidades aritmeticas de los niños</p>
                         <ul class="list-inline item-details">
@@ -546,7 +546,7 @@
                     <div class="modal-body">
                         <h2>Quinta app hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/juegos/fracciones1.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/fracciones-en-iphone.png" class="img-responsive img-centered" alt="">
 
                         <p>Descripcion</p>
                         <ul class="list-inline item-details">
