--- a/Vistas/Prueba_Images.html
+++ b/Vistas/Prueba_Images.html
@@ -25,10 +25,10 @@
             top: 0;
             left: 0;
             z-index: 9;
-            width: 57.2%;
-            height: 38%;
-            margin-top: 2.8%;
-            margin-left: 13.8%;
+            width: 61%;
+            height: 34%;
+            margin-top: 6%;
+            margin-left: 12%;
         }
 
     </style>
@@ -40,8 +40,8 @@
     <!--Con este archivo voy poniendo las imágenes, ya que quedaron
     traslapadas, imprimo la pantalla y es lo que pongo en los modales.-->
 
-    <img src="../img/juegos/fracciones1.png" class="main_image">
-    <img src="../img/juegos/quitaypon1.png" class="watermark">
+    <img src="../img/iphone-6-plus-horizontal.png" class="main_image">
+    <img src="../img/juegos/fracciones2-sin-iphone.png" class="watermark">
 </div>
 </body>
 </html>
