Se le agrego la imagen de la portada de la revista en la pagina publicaciones.html las imagenes estan en /img/articulo

--- a/Vistas/tecnologias.html
+++ b/Vistas/tecnologias.html
@@ -63,11 +63,19 @@
             color:#000;
         }
 
+        #scratch{
+            background-image: url('../img/modals/scratch_logo.png');
+
+            color: #black;
+        }
+
         #web_os{
             background-image: url('../img/modals/webos_logo.png');
            background-color:#0CB7F2;
            color: white;
         }
+
+
     </style>
 
 
@@ -158,12 +166,12 @@
                     </button>
                 </div>
 
-                <div class="jumbotron tecnologia " id="plataforma">
-                    <h2>Plataformas Virtuales en Línea</h2>
-                    <p>Una descripcion de lo que se hizo con las plataformas en linea, el boton es para mostrar mas información
+                <div class="jumbotron tecnologia " id="scratch">
+                    <h2>Herramienta Scratch</h2>
+                    <p>Una descripcion de lo que se hizo con las herramient Scratch, el boton es para mostrar mas información
                         que se quiere decir sobre la tecnologia.
                     </p>
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#plataformaModal">
+                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#scratchModal">
                         Leer Mas
                     </button>
                 </div>
@@ -337,7 +345,7 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="plataformaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="scratchModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
