Se agregaron las paginas personal.html y proyectos.html no tienen nada todavia.

--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -83,6 +83,8 @@
                     <ul class="dropdown-menu">
                         <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
                         <li><a href="publicaciones.html">Publicaciones</a></li>
+                        <li><a href="personal.html">Personal</a></li>
+                        <li><a href="proyectos.html">Proyectos en Desarrollo</a></li>
                         <li><a href="#about">Conocenos</a></li>
                     </ul>
                     <!--<a href="#about">Acerca de</a>-->
@@ -361,7 +363,7 @@
                         <hr class="star-primary">
                         <img src="../img/juegos/geometronixganaste.png" class="img-responsive img-centered" alt="">
                         <!--<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>-->
-                        <p>Geometronix es un juego multijugador para dispositivos poviles que sirve a los niños a mejorar su capacidad de analisis y su habilidad para identificar figuras geometricas.</p>
+                        <p>Geometronix es un juego multijugador para dispositivos moviles que les sirve a los niños para mejorar su capacidad de analísis y su habilidad para identificar figuras geometricas.</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <!--<strong><a href="http://startbootstrap.com">Start Bootstrap</a>-->
@@ -414,7 +416,7 @@
                         <!--by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can-->
                         <!--download their free set with 16 icons, or you can purchase the entire set with 146 icons for-->
                         <!--only $12!</p>-->
-                        <p>Uno Aritmetico es un juego que ayuda a desarrollar la habilidad matematicas de quienes lo juegan</p>
+                        <p>Uno Aritmetico es un juego que ayuda a desarrollar las habilidad matematicas de quienes lo juegan</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <!--<strong><a href="http://startbootstrap.com">Start Bootstrap</a>-->
@@ -463,7 +465,7 @@
                         <hr class="star-primary">
                         <img src="../img/juegos/quita-y-pon-iphone-plus.png" class="img-responsive img-centered" alt="">
 
-                        <p>El juego consiste en completar operaciones aritméticas con los operadores y operandos adecuados para resolver correctamente la misma. Es de gran ayuda para desarrollar las habilidades aritmeticas de los niños</p>
+                        <p>El juego consiste en completar operaciones aritméticas con los operadores y operandos adecuados para resolver correctamente la respouesta dada. Es de gran ayuda para desarrollar las habilidades aritmeticas de los niños</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <strong><a href="#">Link a página de algún autor...</a></strong>
