--- a/Vistas/publicaciones.html
+++ b/Vistas/publicaciones.html
@@ -93,6 +93,8 @@
                     <ul class="dropdown-menu">
                         <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
                         <li><a href="publicaciones.html">Publicaciones</a></li>
+                        <li><a href="personal.html">Personal</a></li>
+                        <li><a href="proyectos.html">Proyectos en Desarrollo</a></li>
                         <!--<li><a href="index.html #about">Conócenos</a></li>-->
                     </ul>
                 </li>
