--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -106,7 +106,54 @@
             <div class="col-lg-12">
                 <!--<img class="img-responsive" src="../img/profile.png" alt="">-->
 
-                <img id="img-uady-jaguar" class="img-responsive" src="../img/uady-jaguar.png" alt="">
+                <!--<img id="img-uady-jaguar" class="img-responsive" src="../img/uady-jaguar.png" alt="">-->
+
+
+
+
+
+                <!--carrusel-->
+
+
+
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="../img/juegos/unoaritmetico1.png" alt="..." class = "img-responsive">
+                            <div class="carousel-caption">
+
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/juegos/unoaritmetico2.png" alt="..." class = "img-responsive">
+                            <div class="carousel-caption">
+                                ...
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+
+                <!--carrusel-->
 
 
                 <div class="intro-text">
