--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -37,10 +37,18 @@
         }
 
         .intro-text {
-            font-size: 75%;
+            font-size: 60%;
+        }
+
+        #footer-text{
+            font-size: 150%;
         }
         #img-uady-jaguar {
             border-radius: 100%;
+        }
+
+      #presentacion {
+        padding-top: 120px;
         }
     </style>
 
@@ -100,14 +108,16 @@
 </nav>
 
 <!-- Header -->
-<header>
-    <div class="container">
+<header >
+    <div class="container" id="presentacion">
         <div class="row">
             <div class="col-lg-12">
                 <!--<img class="img-responsive" src="../img/profile.png" alt="">-->
 
                 <!--<img id="img-uady-jaguar" class="img-responsive" src="../img/uady-jaguar.png" alt="">-->
-
+                <div class="intro-text">
+                    <span class="name">Aprendizaje Lúdico de las Matemáticas</span>
+                </div>
 
 
 
@@ -122,14 +132,21 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="../img/juegos/unoaritmetico1.png" alt="..." class = "img-responsive">
+                            <img src="../img/ninos.jpg" alt="..." class = "img-responsive">
                             <div class="carousel-caption">
 
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/juegos/unoaritmetico1.png" alt="..." class = "img-responsive">
+                            <div class="carousel-caption">
+                                ...
                             </div>
                         </div>
                         <div class="item">
@@ -138,6 +155,7 @@
                                 ...
                             </div>
                         </div>
+
 
                     </div>
 
@@ -155,12 +173,11 @@
 
                 <!--carrusel-->
 
-
-                <div class="intro-text">
-                    <span class="name">Todo sobre apps en la UADY</span>
+                <div id="footer-text">
                     <hr class="star-light">
                     <span class="skills">Profesores + Estudiantes + Ingenio = ¡Éxito!</span>
                 </div>
+
             </div>
         </div>
     </div>
