Se puso la estructura de la información de los maestros con un respectivo modal

--- a/Vistas/personal.html
+++ b/Vistas/personal.html
@@ -41,7 +41,10 @@
         }
 
 
-
+        #personal{
+            margin-top:50px;
+            background-color: #d7f5f7;
+        }
 
     </style>
 
@@ -101,7 +104,144 @@
 </nav>
 
 <!-- Header -->
+<section id="personal">
+    <div class="container">
+        <div class="row">
 
+            <div class="col-lg-4">
+                <img class="img-circle" src="../img/profile.png" alt="..." width="140" height="140">
+                <h2>Jorge Carlos Reyes Magaña</h2>
+                <p>
+                Informacion rapida del maestro no mas de dos líneas
+                    <br/>
+                <strong>Correo:</strong> jorge.reyes@uady.mx
+                    <br/>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#maestro1_modal">
+                        Ver Más &raquo;
+                    </button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="img-circle" src="../img/portfolio/circus.png" alt="Generic placeholder image" width="140" height="140">
+                <h2>Luis Basto Díaz</h2>
+                <p>
+                    Información rapida del maestro no mas de dos líneas
+                    <br/>
+                    <strong>Correo:</strong> luis.basto@uady.mx
+                    <br/>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#maestro2_modal">
+                        Ver Más &raquo;
+                    </button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="img-circle" src="../img/portfolio/cake.png" alt="Generic placeholder image" width="140" height="140">
+                <h2>Rocío Uicab Ballote</h2>
+                <p>
+                    Información rapida del maestro no mas de dos líneas
+                    <br/>
+                    <strong>Correo:</strong> uballote@uady.mx
+                    <br/>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#maestro3_modal">
+                        Ver Más &raquo;
+                    </button>
+            </div><!
+        </div>
+    </div>
+</section>
+
+<!-- Modals-->
+<div class="modal fade" id="maestro1_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" >Jorge Carlos Reyes Magaña</h4>
+            </div>
+            <div class="modal-body">
+                Aqui puede información sobre las aplicaciones, algun link para las personas que trabajan con la
+                tecnología, etc.
+                <br/>
+                <br/>
+                <strong>Mision de la UADY</strong>
+                <br/>
+                <br/>
+                La Universidad Autónoma de Yucatán es una institución pública que tiene como misión la formación integral y humanista de personas en un marco de apertura a todos los campos del conocimiento y a todos los sectores de la sociedad. Como tal, proporciona un espacio de análisis y reflexión crítica sobre los problemas mundiales, nacionales y regionales, conduciendo al desarrollo sustentable de la sociedad, apoyándose en la generación y aplicación del conocimiento, en los valores universales y en el rescate y preservación de la cultura nacional y local.
+                <br/>
+                <br/>
+                <strong>Visión de la UADY</strong>
+                <br/>
+                <br/>
+                La Universidad Autónoma de Yucatán se contempla hacia el año 2006 como una Institución de vanguardia en su carácter de universidad pública, autónoma, laica, eficiente, moderna, responsable, que se interrelaciona con la sociedad de manera equitativa; organizada en DES, con amplia interacción académica alrededor de objetos de estudio y de áreas de conocimiento comunes, con programas académicos de calidad acreditados por organismos externos y procesos de gestión administrativa certificados; con presencia estatal, regional, nacional e internacional, proyectándose fundamentalmente hacia las áreas tropicales de América, capitalizando así las ventajas de su entorno.
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary">Consultar Encargado</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="maestro2_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Luis Basto Díaz</h4>
+            </div>
+            <div class="modal-body">
+                Aqui puede información sobre las aplicaciones, algun link para las personas que trabajan con la
+                tecnología, etc.
+                <br/>
+                <br/>
+                <strong>Mision de la UADY</strong>
+                <br/>
+                <br/>
+                La Universidad Autónoma de Yucatán es una institución pública que tiene como misión la formación integral y humanista de personas en un marco de apertura a todos los campos del conocimiento y a todos los sectores de la sociedad. Como tal, proporciona un espacio de análisis y reflexión crítica sobre los problemas mundiales, nacionales y regionales, conduciendo al desarrollo sustentable de la sociedad, apoyándose en la generación y aplicación del conocimiento, en los valores universales y en el rescate y preservación de la cultura nacional y local.
+                <br/>
+                <br/>
+                <strong>Visión de la UADY</strong>
+                <br/>
+                <br/>
+                La Universidad Autónoma de Yucatán se contempla hacia el año 2006 como una Institución de vanguardia en su carácter de universidad pública, autónoma, laica, eficiente, moderna, responsable, que se interrelaciona con la sociedad de manera equitativa; organizada en DES, con amplia interacción académica alrededor de objetos de estudio y de áreas de conocimiento comunes, con programas académicos de calidad acreditados por organismos externos y procesos de gestión administrativa certificados; con presencia estatal, regional, nacional e internacional, proyectándose fundamentalmente hacia las áreas tropicales de América, capitalizando así las ventajas de su entorno.
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary">Consultar Encargado</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="maestro3_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" >Rocío Uicab Ballote</h4>
+            </div>
+            <div class="modal-body">
+                Aqui puede información sobre las aplicaciones, algun link para las personas que trabajan con la
+                tecnología, etc.
+                <br/>
+                <br/>
+                <strong>Mision de la UADY</strong>
+                <br/>
+                <br/>
+                La Universidad Autónoma de Yucatán es una institución pública que tiene como misión la formación integral y humanista de personas en un marco de apertura a todos los campos del conocimiento y a todos los sectores de la sociedad. Como tal, proporciona un espacio de análisis y reflexión crítica sobre los problemas mundiales, nacionales y regionales, conduciendo al desarrollo sustentable de la sociedad, apoyándose en la generación y aplicación del conocimiento, en los valores universales y en el rescate y preservación de la cultura nacional y local.
+                <br/>
+                <br/>
+                <strong>Visión de la UADY</strong>
+                <br/>
+                <br/>
+                La Universidad Autónoma de Yucatán se contempla hacia el año 2006 como una Institución de vanguardia en su carácter de universidad pública, autónoma, laica, eficiente, moderna, responsable, que se interrelaciona con la sociedad de manera equitativa; organizada en DES, con amplia interacción académica alrededor de objetos de estudio y de áreas de conocimiento comunes, con programas académicos de calidad acreditados por organismos externos y procesos de gestión administrativa certificados; con presencia estatal, regional, nacional e internacional, proyectándose fundamentalmente hacia las áreas tropicales de América, capitalizando así las ventajas de su entorno.
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary">Consultar Encargado</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Footer -->
 <footer class="text-center">
