Se CAMBIARON LAS IMAGENES hay que depurar las imagenes que se necesitan y las que no.

--- a/Vistas/Prueba_Images.html
+++ b/Vistas/Prueba_Images.html
@@ -14,21 +14,21 @@
 
         .main_image {
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 100px;
+            left: 10px;
             z-index: 0;
-            width: 85%;
+            width: 90%;
         }
 
         .watermark {
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 95px;
+            left: 0px;
             z-index: 9;
-            width: 61%;
-            height: 34%;
-            margin-top: 6%;
-            margin-left: 12%;
+            width: 70%;
+            height: 93%;
+            margin-top: 30%;
+            margin-left: 11%;
         }
 
     </style>
@@ -40,8 +40,8 @@
     <!--Con este archivo voy poniendo las imágenes, ya que quedaron
     traslapadas, imprimo la pantalla y es lo que pongo en los modales.-->
 
-    <img src="../img/iphone-6-plus-horizontal.png" class="main_image">
-    <img src="../img/juegos/fracciones2-sin-iphone.png" class="watermark">
+    <img src="../img/juegos/midlet.png" class="main_image">
+    <img src="../img/juegos/warfare1-phone.jpg" class="watermark">
 </div>
 </body>
 </html>
