--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -42,6 +42,7 @@
 
         #footer-text{
             font-size: 150%;
+
         }
         #img-uady-jaguar {
             border-radius: 100%;
@@ -49,6 +50,11 @@
 
       #presentacion {
         padding-top: 120px;
+        }
+
+        .contenedor-carusel{
+            width: 813 px;
+            height: 493 px;
         }
     </style>
 
@@ -136,24 +142,35 @@
                     </ol>
 
                     <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-                            <img src="../img/ninos.jpg" alt="..." class = "img-responsive">
-                            <div class="carousel-caption">
+                    <div class="carousel-inner" role="listbox" >
+                        <div class="item active" >
+                            <div class="contenedor-carusel">
+                                <img src="../img/ninos.jpg" alt="..." class = "img-responsive" >
+                                <div class="carousel-caption">
 
+                                </div>
                             </div>
+
+
+
                         </div>
                         <div class="item">
-                            <img src="../img/juegos/unoaritmetico1.png" alt="..." class = "img-responsive">
-                            <div class="carousel-caption">
-                                ...
+                            <div class="contenedor-carusel">
+                                <img src="../img/juegos/Uno-aritmetico-en-tablet2.jpg" alt="..." class = "img-responsive" >
+                                <div class="carousel-caption">
+
+                                </div>
                             </div>
+
                         </div>
                         <div class="item">
-                            <img src="../img/juegos/unoaritmetico2.png" alt="..." class = "img-responsive">
-                            <div class="carousel-caption">
-                                ...
+                            <div class="contenedor-carusel">
+                                <img src="../img/juegos/unoaritmetico2.png" alt="..." class = "img-responsive" >
+                                <div class="carousel-caption">
+
+                                </div>
                             </div>
+
                         </div>
 
 
@@ -200,7 +217,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/geometronix2.png" class="img-responsive" alt="">
+                    <img src="../img/juegos/geometronix2-tablet.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -210,7 +227,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/unoaritmetico2.png" class="img-responsive" alt="">
+                    <img src="../img/juegos/unoaritmetico2-tablet.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -220,7 +237,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/quitaypon.png" class="img-responsive" alt="">
+                    <img src="../img/juegos/quitaypon-iphone.png" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -230,7 +247,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/warfare.png" class="img-responsive" alt="">
+                    <img src="../img/juegos/warfare-phone.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -250,7 +267,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/cuantofalta.png" class="img-responsive" alt="">
+                    <img src="../img/juegos/cuantofalta-fixed.jpg" class="img-responsive" alt="">
                 </a>
             </div>
         </div>
@@ -425,7 +442,7 @@
                     <div class="modal-body">
                         <h2>Geometronix</h2>
                         <hr class="star-primary">
-                        <img src="../img/juegos/geometronixganaste.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/geometronixganaste-tablet.jpg" class="img-responsive img-centered" alt="">
                         <!--<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>-->
                         <p>Geometronix es un juego multijugador para dispositivos moviles que les sirve a los niños para mejorar su capacidad de analísis y su habilidad para identificar figuras geometricas.</p>
                         <ul class="list-inline item-details">
@@ -573,7 +590,7 @@
                     <div class="modal-body">
                         <h2>Cuarta app hecha</h2>
                         <hr class="star-primary">
-                        <img src="../img/juegos/warfare1.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/warfare1-phone.jpg" class="img-responsive img-centered" alt="">
 
                         <p>Descripción</p>
                         <ul class="list-inline item-details">
@@ -651,7 +668,7 @@
                     <div class="modal-body">
                         <h2>Project Title</h2>
                         <hr class="star-primary">
-                        <img src="../img/juegos/cuantofalta2.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/cuantofalta-fixed.jpg" class="img-responsive img-centered" alt="">
 
                         <p>Descripción</p>
                         <ul class="list-inline item-details">
