Se corrigió el marco del carrusel.

--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -40,22 +40,29 @@
             font-size: 60%;
         }
 
-        #footer-text{
+        #footer-text {
             font-size: 150%;
 
         }
+
         #img-uady-jaguar {
             border-radius: 100%;
         }
 
-      #presentacion {
-        padding-top: 120px;
+        #presentacion {
+            padding-top: 120px;
         }
 
-        .contenedor-carusel{
-            width: 813 px;
-            height: 493 px;
+        .contenedor-carusel {
+            width: 1150px;
+            height: 493px;
         }
+
+        .image-carousel {
+            width: 80%;
+            height: 100%;
+        }
+
     </style>
 
 
@@ -93,7 +100,7 @@
                 </li>
                 <li class="page-scroll dropdown">
 
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acerca de  <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acerca de <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
                         <li><a href="publicaciones.html">Publicaciones</a></li>
@@ -114,7 +121,7 @@
 </nav>
 
 <!-- Header -->
-<header >
+<header>
     <div class="container" id="presentacion">
         <div class="row">
             <div class="col-lg-12">
@@ -126,10 +133,7 @@
                 </div>
 
 
-
-
                 <!--carrusel-->
-
 
 
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -142,21 +146,23 @@
                     </ol>
 
                     <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox" >
-                        <div class="item active" >
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
                             <div class="contenedor-carusel">
-                                <img src="../img/ninos.jpg" alt="..." class = "img-responsive" >
+                                <img src="../img/ninos.jpg" alt="..." class="img-responsive image-carousel">
+
                                 <div class="carousel-caption">
 
                                 </div>
                             </div>
 
 
-
                         </div>
                         <div class="item">
                             <div class="contenedor-carusel">
-                                <img src="../img/juegos/Uno-aritmetico-en-tablet2.jpg" alt="..." class = "img-responsive" >
+                                <img src="../img/juegos/Uno-aritmetico-en-tablet2.jpg"
+                                     alt="..." class="img-responsive image-carousel">
+
                                 <div class="carousel-caption">
 
                                 </div>
@@ -165,7 +171,9 @@
                         </div>
                         <div class="item">
                             <div class="contenedor-carusel">
-                                <img src="../img/juegos/unoaritmetico2.png" alt="..." class = "img-responsive" >
+                                <img src="../img/juegos/unoaritmetico2.png" alt="..."
+                                     class="img-responsive image-carousel">
+
                                 <div class="carousel-caption">
 
                                 </div>
@@ -442,9 +450,11 @@
                     <div class="modal-body">
                         <h2>Geometronix</h2>
                         <hr class="star-primary">
-                        <img src="../img/juegos/geometronixganaste-tablet.jpg" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/geometronixganaste-tablet.jpg" class="img-responsive img-centered"
+                             alt="">
                         <!--<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>-->
-                        <p>Geometronix es un juego multijugador para dispositivos moviles que les sirve a los niños para mejorar su capacidad de analísis y su habilidad para identificar figuras geometricas.</p>
+                        <p>Geometronix es un juego multijugador para dispositivos moviles que les sirve a los niños para
+                            mejorar su capacidad de analísis y su habilidad para identificar figuras geometricas.</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <!--<strong><a href="http://startbootstrap.com">Start Bootstrap</a>-->
@@ -465,7 +475,7 @@
                             </li>
                             <li> Manual:
                                 <a href="../Media/Manuales/Adivina_al_geometronix.pptx"
-                                        target="_blank">Descargar Presentación del Geometronix</a>
+                                   target="_blank">Descargar Presentación del Geometronix</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
@@ -491,13 +501,15 @@
                     <div class="modal-body">
                         <h2>Uno Aritemtico</h2>
                         <hr class="star-primary">
-                        <img src="../img/juegos/Uno-aritmetico-en-tablet.png" class="img-responsive img-centered" alt="">
+                        <img src="../img/juegos/Uno-aritmetico-en-tablet.png" class="img-responsive img-centered"
+                             alt="">
 
                         <!--<p>Use this area of the page to describe your project. The icon above is part of a free icon set-->
                         <!--by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can-->
                         <!--download their free set with 16 icons, or you can purchase the entire set with 146 icons for-->
                         <!--only $12!</p>-->
-                        <p>Uno Aritmetico es un juego que ayuda a desarrollar las habilidad matematicas de quienes lo juegan</p>
+                        <p>Uno Aritmetico es un juego que ayuda a desarrollar las habilidad matematicas de quienes lo
+                            juegan</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <!--<strong><a href="http://startbootstrap.com">Start Bootstrap</a>-->
@@ -518,7 +530,7 @@
                             </li>
                             <li> Manual:
                                 <a href="../Media/Manuales/Manual%20Usuario%20-%20Uno%20Aritmetico.docx"
-                                        target="_blank">Descargar Manual de Usuario</a>
+                                   target="_blank">Descargar Manual de Usuario</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
@@ -546,7 +558,9 @@
                         <hr class="star-primary">
                         <img src="../img/juegos/quita-y-pon-iphone-plus.png" class="img-responsive img-centered" alt="">
 
-                        <p>El juego consiste en completar operaciones aritméticas con los operadores y operandos adecuados para resolver correctamente la respouesta dada. Es de gran ayuda para desarrollar las habilidades aritmeticas de los niños</p>
+                        <p>El juego consiste en completar operaciones aritméticas con los operadores y operandos
+                            adecuados para resolver correctamente la respouesta dada. Es de gran ayuda para desarrollar
+                            las habilidades aritmeticas de los niños</p>
                         <ul class="list-inline item-details">
                             <li>Autores:
                                 <strong><a href="#">Link a página de algún autor...</a></strong>
@@ -564,7 +578,7 @@
                             </li>
                             <li> Manual:
                                 <a href="../Media/Manuales/Manual_de_usuario-Quita_y_Pon.docx"
-                                        target="_blank">Descargar Manual de usuario</a>
+                                   target="_blank">Descargar Manual de usuario</a>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
