--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -23,6 +23,8 @@
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
           type="text/css">
 
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -33,7 +35,7 @@
 
     <style type="text/css">
         #textTitle {
-            font-size: 100%;
+            font-size: 90%;
         }
 
         .intro-text {
@@ -43,6 +45,9 @@
         #footer-text {
             font-size: 150%;
 
+        }
+        .nav-titulos{
+            font-size: 70%;
         }
 
         #img-uady-jaguar {
@@ -54,13 +59,17 @@
         }
 
         .contenedor-carusel {
-            width: 1150px;
-            height: 493px;
+            width: 750px;
+            height: 400px;
         }
 
-        .image-carousel {
+       .image-carousel {
             width: 80%;
             height: 100%;
+        }
+        .col-centered{
+            float: none;
+            margin: 0 auto;
         }
 
     </style>
@@ -84,35 +93,41 @@
             </button>
 
             <a id="textTitle" class="navbar-brand" href="#page-top">
-                Bienvenido a la página de apps hechas en la UADY!</a>
+                Bienvenido a las de apps hechas en la UADY!</a>
 
 
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right nav-titulos">
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
                     <a href="#apps_hechas">Applicaciones hechas</a>
                 </li>
-                <li class="page-scroll dropdown">
-
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Acerca de <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
-                        <li><a href="publicaciones.html">Publicaciones</a></li>
-                        <li><a href="personal.html">Personal</a></li>
-                        <li><a href="proyectos.html">Proyectos en Desarrollo</a></li>
-                        <li><a href="#about">Conocenos</a></li>
-                    </ul>
-                    <!--<a href="#about">Acerca de</a>-->
-                </li>
+                <li><a href="publicaciones.html">Publicaciones</a></li>
+                <li><a href="proyectos.html">Proyectos en Desarrollo</a></li>
                 <li class="page-scroll">
                     <a href="#contact">Contáctanos</a>
                 </li>
+
+                <li class="page-scroll dropdown">
+
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Más<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="tecnologias.html">Tecnologias Usadas</a></li>
+
+                        <li><a href="personal.html">Personal</a></li>
+
+                        <li><a href="#about">Conocenos</a></li>
+                        <li><a href="login.html">Iniciar sesión</a></li>
+                    </ul>
+
+                </li>
+
+
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -124,13 +139,14 @@
 <header>
     <div class="container" id="presentacion">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="intro-text">
+                <span class="name">Aprendizaje Lúdico de las Matemáticas</span>
+            </div>
+            <div class="col-lg-8 col-centered">
                 <!--<img class="img-responsive" src="../img/profile.png" alt="">-->
 
                 <!--<img id="img-uady-jaguar" class="img-responsive" src="../img/uady-jaguar.png" alt="">-->
-                <div class="intro-text">
-                    <span class="name">Aprendizaje Lúdico de las Matemáticas</span>
-                </div>
+
 
 
                 <!--carrusel-->
@@ -280,6 +296,7 @@
             </div>
         </div>
     </div>
+    
 </section>
 
 <!-- About Section -->
@@ -725,6 +742,9 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="../js/freelancer.js"></script>
+
+
+
 
 </body>
 
